syntax = "proto3";

package jutjubic;

option java_multiple_files = true;
option java_package = "com.example.jutjubic.proto";
option java_outer_classname = "UploadEventProto";

message UploadEvent {
  int64 videoId = 1;
  string title = 2;
  int64 sizeMB = 3;
  string authorUsername = 4;
  string createdAt = 5; // ISO string (npr 2026-02-05T18:10:00)
}
